# USFM-Tools

./: .gitignore  README  buildOEB.sh  default.config  licence.txt  pyproject.toml  readme.md  test.docx  todo.txt  transform.py  usfm-tools  usfm2osis.py  wordlist.py
check/: check.py
support/: abstractRenderer.py  accordanceRenderer.py  asciiPrinter.py  asciiRenderer.py  books.py  contextRenderer.py  csvRenderer.py  csvise.py  docxRenderer.py  epubRenderer.py  htmlRenderer.py  htmlise.py  loutRenderer.py  loutise.py  markdownise.py  mdRenderer.py  mediawikiPrinter.py  oldhtmlRenderer.py  oldreaderise.py  parseUsfm-o.py  parseUsfm.py  readerise.py  rendererConfig.py  rtfRenderer.py  singlehtmlRenderer.py  singlehtmlise.py  texise.py  wordRenderer.py
support/htmlsupport/: index-dev.html  index-nt.html  index-release.html  index.html  jump.js  style.css
support/test/: all_test.py
test/: Mark.usfm
transform/: buildOEB.sh  default.config  readme.md  transform.py
transform/support/: abstractRenderer.py  accordanceRenderer.py  asciiRenderer.py  books.py  contextRenderer.py  csvRenderer.py  docxRenderer.py  epubRenderer.py  htmlRenderer.py  lout.sh  loutRenderer.py  mdRenderer.py  mediawikiPrinter.py  mobiRenderer.py  oldhtmlRenderer.py  oldreaderise.py  parseUsfm-o.py  parseUsfm.py  readerise.py  rendererConfig.py  rtfRenderer.py  sharedLogger.py  singlehtmlRenderer.py
transform/support/htmlsupport/: index.html
variant/: variant.py
working/lout/: OEB-Genesis-Current-US.lout  OEB-Genesis-Current-US.lout.ld  OEB-Genesis-Current-US.ps  lout.li
(+1 files in other folders)
